# redrift

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
redrift/: cli.py  drift.py  git_tools.py  specs.py  verify.py
scripts/: e2e_core_lane.sh
tests/: test_commit.py  test_drift.py  test_execute.py  test_imports.py  test_verify.py
